Prevented the conviction text from having a line break inserted

--- a/src/scss/official/_sheet.scss
+++ b/src/scss/official/_sheet.scss
@@ -146,6 +146,7 @@
       transform: scale(1);
       border-radius: 5px;
       animation: pulse 2s infinite;
+      white-space: nowrap;
     }
 
     @keyframes pulse {
